# pdf-generation-api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/api/: admin_schemas.py  routes.py  schemas.py  security.py
app/services/: billing_store.py  pdf_service.py
app/templates/: invoice.html  welcome.html
samples/: README.md
samples/css/: enterprise_invoice.css  operations_review_q4_2025.css
samples/data/: enterprise_invoice.json  enterprise_invoice_high_volume.json
samples/html/: operations_review_q4_2025.html
samples/template/: enterprise_invoice.html
tests/: conftest.py  test_auth_and_admin.py  test_docs_and_welcome.py  test_generate.py
